fix collapse direction and position

--- a/Flask/static/style.css
+++ b/Flask/static/style.css
@@ -110,6 +110,7 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     cursor: pointer;
+    margin: 8px;
 }
 
 .btn-configurator:hover {
@@ -119,7 +120,7 @@ body {
 .btn-configurator.active-button {
     width: 32px;
     height: 32px;
-    margin: -8px;
+    margin: 0;
 }
 
 .btn-configurator-save{
@@ -140,4 +141,12 @@ body {
 
 .card-configurator-x3 {
     width: 900px;
+}
+
+.card-configurator-bc{
+    transform:translate(calc(-50% + 16px), -40px)
+}
+
+.card-configurator-tc{
+    transform:translate(calc(-50% + 16px), calc(100% + 10px))
 }
